clusters/home/apps/cloud/ocis/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ocis
  namespace: owncloud
  annotations:
      external-dns.alpha.kubernetes.io/enabled: "true"
      external-dns.alpha.kubernetes.io/hostname: "oc.layertwo.dev"
      external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
      cert-manager.io/cluster-issuer: letsencrypt-prod-dns
      kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`oc.layertwo.dev`)
      kind: Rule
      services:
        - name: ocis
          port: 9200
      middlewares:
        - name: secure-headers
          namespace: traefik-external
